--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@
   <!-- Navigation Bar -->
   <nav class="navbar navbar-expand-lg navbar-dark shadow-sm navbar fixed-top" style="background-color: rgb(58, 58, 163)">
    <div class="container">
-    <a class="navbar-brand" href="">Reyhan Alvaro</a>
+    <a class="navbar-brand" href="index.html">Reyhan Alvaro</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
      <span class="navbar-toggler-icon"></span>
     </button>
