--- a/home.html
+++ b/home.html
@@ -46,7 +46,7 @@
   <section class="jumbotron text-center">
    <img src="Images/Alvaro.jpg" alt="Reyhan Alvaro" width="200" class="rounded-circle img-thumbnail" />
    <h1 class="display-4">Reyhan Alvaro</h1>
-   <p class="lead">Mahasiswa Tekhnik Informatika Bina Nusantara</p>
+   <p class="lead">Mahasiswa Teknik Informatika Bina Nusantara</p>
   </section>
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
    <path
