--- a/home.html
+++ b/home.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
- <head>
+
+<head>
   <!-- Required meta tags -->
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
 
   <!-- CSS -->
   <link rel="stylesheet" href="style.css" />
@@ -13,67 +15,70 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.6.1/font/bootstrap-icons.css">
 
   <title>My Portofolio | Reyhan Alvaro</title>
- </head>
- <body id="home">
+</head>
+
+<body id="home">
   <!-- Navigation Bar -->
-  <nav class="navbar navbar-expand-lg navbar-dark shadow-sm navbar fixed-top" style="background-color: rgb(58, 58, 163)">
-   <div class="container">
-    <a class="navbar-brand" href="index.html">Reyhan Alvaro</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-     <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-     <ul class="navbar-nav ms-auto">
-      <li class="nav-item">
-       <a class="nav-link active" aria-current="page" href="#home">Home</a>
-      </li>
-      <li class="nav-item">
-       <a class="nav-link" href="#about">About</a>
-      </li>
-      <li class="nav-item">
-       <a class="nav-link" href="#projects">Projects</a>
-      </li>
-      <li class="nav-item">
-       <a class="nav-link" href="#contact">Contact</a>
-      </li>
-     </ul>
+  <nav class="navbar navbar-expand-lg navbar-dark shadow-sm navbar fixed-top"
+    style="background-color: rgb(58, 58, 163)">
+    <div class="container">
+      <a class="navbar-brand" href="index.html">Reyhan Alvaro</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#home">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#about">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#projects">Projects</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#contact">Contact</a>
+          </li>
+        </ul>
+      </div>
     </div>
-   </div>
   </nav>
   <!-- Akhir Navbar -->
 
   <!-- Jumbotron -->
   <section class="jumbotron text-center">
-   <img src="Images/Alvaro.jpg" alt="Reyhan Alvaro" width="200" class="rounded-circle img-thumbnail" />
-   <h1 class="display-4">Reyhan Alvaro</h1>
-   <p class="lead">Mahasiswa Teknik Informatika Bina Nusantara</p>
+    <img src="Images/Alvaro.jpg" alt="Reyhan Alvaro" width="200" class="rounded-circle img-thumbnail" />
+    <h1 class="display-4">Reyhan Alvaro</h1>
+    <p class="lead">Mahasiswa Teknik Informatika Bina Nusantara</p>
   </section>
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-   <path
-    fill="#e2edff"
-    fill-opacity="1"
-    d="M0,96L60,122.7C120,149,240,203,360,192C480,181,600,107,720,106.7C840,107,960,181,1080,186.7C1200,192,1320,128,1380,96L1440,64L1440,0L1380,0C1320,0,1200,0,1080,0C960,0,840,0,720,0C600,0,480,0,360,0C240,0,120,0,60,0L0,0Z"
-   ></path>
+    <path fill="#e2edff" fill-opacity="1"
+      d="M0,96L60,122.7C120,149,240,203,360,192C480,181,600,107,720,106.7C840,107,960,181,1080,186.7C1200,192,1320,128,1380,96L1440,64L1440,0L1380,0C1320,0,1200,0,1080,0C960,0,840,0,720,0C600,0,480,0,360,0C240,0,120,0,60,0L0,0Z">
+    </path>
   </svg>
   <!-- Akhir Jumbotron -->
 
   <!-- About -->
   <section id="about">
-   <div class="container">
-    <div class="row text-center mb-3">
-     <div class="col-sm"><h2>About Me</h2></div>
+    <div class="container">
+      <div class="row text-center mb-3">
+        <div class="col-sm">
+          <h2>About Me</h2>
+        </div>
+      </div>
+      <div class="row justify-content-center">
+        <div class="col-md-4 fs-5 text-center">Mahasiswa Computer Science dari Bina Nusantara University.
+          Memiliki kemampuan menganalisa data, problem solving, dan
+          berpikir kritis. Selalu berfokus pada detail dan bertanggung
+          jawab.</div>
+        <div class="col-md-4 fs-5 text-center">Mengembangkan minat seputar Front-End Web Development untuk menerapkan
+          kemampuan dan membantu perusahaan dalam bidang Web Development serta
+          menambah pengalaman dalam bekerja.</div>
+      </div>
     </div>
-    <div class="row justify-content-center">
-     <div class="col-md-4 fs-5 text-center">Mahasiswa Computer Science dari Bina Nusantara University.
-        Memiliki kemampuan menganalisa data, problem solving, dan
-        berpikir kritis. Selalu berfokus pada detail dan bertanggung
-        jawab.</div>
-     <div class="col-md-4 fs-5 text-center">Mengembangkan minat seputar Front-End Web Development untuk menerapkan
-        kemampuan dan membantu perusahaan dalam bidang Web Development serta
-        menambah pengalaman dalam bekerja.</div>
-    </div>
-   </div>
-   <h2>My Skills</h2>
+    <h2>My Skills</h2>
     <div class="skills-area">
       <div class="skill">
         <div class="skill-title">HTML</div>
@@ -99,89 +104,105 @@
     </div>
   </section>
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-   <path
-    fill="#e2edff"
-    fill-opacity="1"
-    d="M0,160L40,133.3C80,107,160,53,240,69.3C320,85,400,171,480,170.7C560,171,640,85,720,74.7C800,64,880,128,960,170.7C1040,213,1120,235,1200,218.7C1280,203,1360,149,1400,122.7L1440,96L1440,320L1400,320C1360,320,1280,320,1200,320C1120,320,1040,320,960,320C880,320,800,320,720,320C640,320,560,320,480,320C400,320,320,320,240,320C160,320,80,320,40,320L0,320Z"
-   ></path>
+    <path fill="#e2edff" fill-opacity="1"
+      d="M0,160L40,133.3C80,107,160,53,240,69.3C320,85,400,171,480,170.7C560,171,640,85,720,74.7C800,64,880,128,960,170.7C1040,213,1120,235,1200,218.7C1280,203,1360,149,1400,122.7L1440,96L1440,320L1400,320C1360,320,1280,320,1200,320C1120,320,1040,320,960,320C880,320,800,320,720,320C640,320,560,320,480,320C400,320,320,320,240,320C160,320,80,320,40,320L0,320Z">
+    </path>
   </svg>
-<!-- Akhir About -->
+  <!-- Akhir About -->
 
   <!-- Projects -->
   <section id="projects">
-   <div class="container ">
-    <div class="row text-center">
-     <div class="col">
-      <h2>My Projects</h2>
-     </div>
-     <div class="row">
-      <div class="col-md-4 mb-3">
-       <div class="card">
-        <img src="Projects/Kitchen Timer.jpg" class="image" alt="Project Kitchen Timer" />
-        <div class="card-body">
-            <p class="card-text"><a class="linked" href="https://www.canva.com/design/DAEt2eXPjIw/qymkCsKOQwFj5Q4sU3md7A/edit?utm_content=DAEt2eXPjIw&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="blank">Kitchen Timer</a></p>
+    <div class="container ">
+      <div class="row text-center">
+        <div class="col">
+          <h2>My Projects</h2>
         </div>
-       </div>
-      </div>
-      <div class="col-md-4 mb-3">
-       <div class="card">
-        <img src="Projects/Smart Library (1).jpg" class="image" alt="Project Smart Library"/>
-        <div class="card-body" >
-            <p class="card-text"><a class="linked" href="https://www.canva.com/design/DAEt2UyywEc/vFh-bX7YsysOD7d7h-_s0w/edit?utm_content=DAEt2UyywEc&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="blank">Smart Library</a></p>
+        <div class="row">
+          <div class="col-md-4 mb-3">
+            <div class="card">
+              <img src="Projects/Kitchen Timer.jpg" class="image" alt="Project Kitchen Timer" />
+              <div class="card-body">
+                <p class="card-text"><a class="linked"
+                    href="https://www.canva.com/design/DAEt2eXPjIw/qymkCsKOQwFj5Q4sU3md7A/edit?utm_content=DAEt2eXPjIw&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton"
+                    target="blank">Kitchen Timer</a></p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 mb-3">
+            <div class="card">
+              <img src="Projects/Smart Library (1).jpg" class="image" alt="Project Smart Library" />
+              <div class="card-body">
+                <p class="card-text"><a class="linked"
+                    href="https://www.canva.com/design/DAEt2UyywEc/vFh-bX7YsysOD7d7h-_s0w/edit?utm_content=DAEt2UyywEc&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton"
+                    target="blank">Smart Library</a></p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 mb-3">
+            <div class="card">
+              <img src="Projects/Smart Parking System.jpg" class="image" alt="Project Smart Parking System" />
+              <div class="card-body">
+                <p class="card-text"><a class="linked"
+                    href="https://www.canva.com/design/DAEt2R9Ni8M/eDaKipxeQEG7tTAzFqboPA/edit?utm_content=DAEt2R9Ni8M&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton"
+                    target="blank">Smart Parking System</a></p>
+              </div>
+            </div>
+          </div>
         </div>
-       </div>
       </div>
-      <div class="col-md-4 mb-3">
-       <div class="card">
-        <img src="Projects/Smart Parking System.jpg" class="image" alt="Project Smart Parking System" />
-        <div class="card-body">
-            <p class="card-text"><a class="linked" href="https://www.canva.com/design/DAEt2R9Ni8M/eDaKipxeQEG7tTAzFqboPA/edit?utm_content=DAEt2R9Ni8M&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="blank">Smart Parking System</a></p>
-        </div>
-       </div>
-      </div>
-     </div>
-    </div>
   </section>
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#e2edff" fill-opacity="1" d="M0,96L30,122.7C60,149,120,203,180,213.3C240,224,300,192,360,160C420,128,480,96,540,112C600,128,660,192,720,181.3C780,171,840,85,900,74.7C960,64,1020,128,1080,170.7C1140,213,1200,235,1260,224C1320,213,1380,171,1410,149.3L1440,128L1440,0L1410,0C1380,0,1320,0,1260,0C1200,0,1140,0,1080,0C1020,0,960,0,900,0C840,0,780,0,720,0C660,0,600,0,540,0C480,0,420,0,360,0C300,0,240,0,180,0C120,0,60,0,30,0L0,0Z"></path></svg>
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+    <path fill="#e2edff" fill-opacity="1"
+      d="M0,96L30,122.7C60,149,120,203,180,213.3C240,224,300,192,360,160C420,128,480,96,540,112C600,128,660,192,720,181.3C780,171,840,85,900,74.7C960,64,1020,128,1080,170.7C1140,213,1200,235,1260,224C1320,213,1380,171,1410,149.3L1440,128L1440,0L1410,0C1380,0,1320,0,1260,0C1200,0,1140,0,1080,0C1020,0,960,0,900,0C840,0,780,0,720,0C660,0,600,0,540,0C480,0,420,0,360,0C300,0,240,0,180,0C120,0,60,0,30,0L0,0Z">
+    </path>
+  </svg>
   <!-- Akhir Projects -->
 
   <!-- Contact -->
   <section id="contact">
     <div class="row text-center">
-        <div class="col p-3">
-         <h2>Contact Me</h2>
-        </div>
-        <div class="row justify-content-center">
-            <div class="col-md-8">
-                <form>
-                    <div class="mb-3 mt-3">
-                       <label for="name">Nama Lengkap</label>
-                        <input type="text" class="form-control" id="name" aria-describedby="name">
-                      </div>
-                      <div class="mb-3">
-                        <label for="email">Email address</label>
-                        <input type="email" class="form-control" id="email">
-                      </div>
-                      <div class="mb-3">
-                          <label for="pesan">Pesan</label>
-                          <textarea class="form-control" id="pesan" rows="3"></textarea>
-                      </div>
-                      <button type="submit" class="btn btn-primary ">Kirim</button>   
-                        </div>
-                  </form>
+      <div class="col p-3">
+        <h2>Contact Me</h2>
+      </div>
+      <div class="row justify-content-center">
+        <div class="col-md-8">
+          <form>
+            <div class="mb-3 mt-3">
+              <label for="name">Nama Lengkap</label>
+              <input type="text" class="form-control" id="name" aria-describedby="name">
             </div>
+            <div class="mb-3">
+              <label for="email">Email address</label>
+              <input type="email" class="form-control" id="email">
+            </div>
+            <div class="mb-3">
+              <label for="pesan">Pesan</label>
+              <textarea class="form-control" id="pesan" rows="3"></textarea>
+            </div>
+            <button type="submit" class="btn btn-primary ">Kirim</button>
         </div>
-       </div>
+        </form>
+      </div>
+    </div>
+    </div>
   </section>
-   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#0d6efd" fill-opacity="1" d="M0,224L34.3,208C68.6,192,137,160,206,149.3C274.3,139,343,149,411,170.7C480,192,549,224,617,240C685.7,256,754,256,823,213.3C891.4,171,960,85,1029,85.3C1097.1,85,1166,171,1234,208C1302.9,245,1371,235,1406,229.3L1440,224L1440,320L1405.7,320C1371.4,320,1303,320,1234,320C1165.7,320,1097,320,1029,320C960,320,891,320,823,320C754.3,320,686,320,617,320C548.6,320,480,320,411,320C342.9,320,274,320,206,320C137.1,320,69,320,34,320L0,320Z"></path></svg>
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+    <path fill="#0d6efd" fill-opacity="1"
+      d="M0,224L34.3,208C68.6,192,137,160,206,149.3C274.3,139,343,149,411,170.7C480,192,549,224,617,240C685.7,256,754,256,823,213.3C891.4,171,960,85,1029,85.3C1097.1,85,1166,171,1234,208C1302.9,245,1371,235,1406,229.3L1440,224L1440,320L1405.7,320C1371.4,320,1303,320,1234,320C1165.7,320,1097,320,1029,320C960,320,891,320,823,320C754.3,320,686,320,617,320C548.6,320,480,320,411,320C342.9,320,274,320,206,320C137.1,320,69,320,34,320L0,320Z">
+    </path>
+  </svg>
   <!-- Akhir Contact -->
 
   <!-- Footer -->
   <footer class="bg-primary text-white text-center p-3">
-      <p>Created by <a href="https://instagram.com/reyhanalvr" target="blank" class="text-white fw-bold">Reyhan Alvaro</a></p>
+    <p>Created by <a href="https://instagram.com/reyhanalvr" target="blank" class="text-white fw-bold">Reyhan Alvaro</a>
+    </p>
   </footer>
   <!-- Akhir Footer -->
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
- </body>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+  </script>
+</body>
+
 </html>
